# src/main/java/hhplus/ecommerce/product/presentation/dto/request/ProductRegistrationRequest.java
@@ -1,5 +1,6 @@
 package hhplus.ecommerce.product.presentation.dto.request;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.validation.constraints.DecimalMin;
 import jakarta.validation.constraints.Min;
 import jakarta.validation.constraints.NotNull;
@@ -30,5 +31,6 @@ public class ProductRegistrationRequest {
     @Min(value = 0, message = "상품 재고는 0 이상이어야 합니다.")
     private int stockQuantity;
 
+    @JsonProperty("is_exposed")
     private boolean isExposed;
 }
